<resources>
    <string name="app_name">ARSIAPP</string>
    <string name="title_activity_bottom_nav">MainActivity</string>

    <string name="title_home">Inicio</string>
    <string name="title_service">Servicios</string>
    <string name="title_courses">Cursos</string>
    <string name="title_location">Ubicanos</string>
    <string name="title_contact">Contacto</string>


    <string name="clave_youtube">AIzaSyAhsfUlzyOFeKPQcr3Ovj3zjIbUNmxJI7I</string>
    <string name="title_activity_maps">Map</string>
</resources>